--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=INFO, console, fileAppender
+log4j.rootLogger=INFO, console, file
 
 # Redirect log messages to console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
@@ -11,6 +11,6 @@ log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.DatePattern='.'yyyy-MM-dd-HH-mm
 log4j.appender.file.encoding=UTF-8
-log4j.appender.file.File=logs/mlExtractor.log
+log4j.appender.file.File=C:/Arquivos/ml.extractor/log/mlExtractor.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
