--- a/resources/config.properties
+++ b/resources/config.properties
@@ -3,5 +3,5 @@ ml.url.page.main=https://www.mercadolivre.com.br/
 ml.url.page.search=https://lista.mercadolivre.com.br/
 
 # excel entrada e saida
-excel.produtos.entrada=
-excel.produtos.saida=
+excel.produtos.entrada=C:\\Arquivos\\ml.extractor\\
+excel.produtos.saida=C:\\Arquivos\\ml.extractor\\saida\\
